# ocr

./: .dockerignore  .gitignore  Dockerfile  README.md  app.yaml  deploy.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.sh
app/: __init__.py  cache.py  config.py  logging_setup.py  main.py  models.py  ocr.py  rate_limit.py  utils.py
sample_images/: create_samples.py
tests/: test_api.py
